# packages/swagger/swagger.json
@@ -947,7 +947,7 @@
           }
         },
         "summary": "생활서비스 전문가 포트폴리오 추가",
-        "description": "생활서비스 전문가 포트폴리오 추가\n\n@summary 생활서비스 전문가 포트폴리오 추가\n\n@tag hs-providers\n\n@param access_token 생활서비스 전문가 권한을 갖는 액세스 토큰\n\n@param body 포트폴리오 정보",
+        "description": "생활서비스 전문가 포트폴리오 추가\n\n{@link IHSProvider.FailureCode.Authorize 에러 코드}\n\n@summary 생활서비스 전문가 포트폴리오 추가\n\n@tag hs-providers\n\n@param access_token 생활서비스 전문가 권한을 갖는 액세스 토큰\n\n@param body 포트폴리오 정보",
         "x-nestia-namespace": "users.biz-users.hs-providers.me.portfolios.create",
         "x-nestia-jsDocTags": [
           {
@@ -1033,7 +1033,7 @@
           }
         },
         "summary": "내 포트폴리오 목록 조회",
-        "description": "내 포트폴리오 목록 검색\n\n@summary 내 포트폴리오 목록 조회\n\n@tag hs-providers\n\n@param access_token 생활서비스 전문가 권한을 갖는 액세스 토큰\n\n@param query 페이지 정보\n\n@return 포트폴리오 상세 정보 목록",
+        "description": "내 포트폴리오 목록 검색\n\n{@link IHSProvider.FailureCode.Authorize 에러 코드}\n\n@summary 내 포트폴리오 목록 조회\n\n@tag hs-providers\n\n@param access_token 생활서비스 전문가 권한을 갖는 액세스 토큰\n\n@param query 페이지 정보\n\n@return 포트폴리오 상세 정보 목록",
         "x-nestia-namespace": "users.biz-users.hs-providers.me.portfolios.getList",
         "x-nestia-jsDocTags": [
           {
@@ -1470,7 +1470,7 @@
           }
         },
         "summary": "생활서비스 전문가 포트폴리오 목록 검색",
-        "description": "생활서비스 전문가 포트폴리오 목록 검색\n\n@summary 생활서비스 전문가 포트폴리오 목록 검색\n\n@tag hs-providers\n\n@param provider_id 생활서비스 전문가 id\n\n@param query 페이지 정보\n\n@return 포트폴리오 공개 정보 목록",
+        "description": "생활서비스 전문가 포트폴리오 목록 검색\n\n{@link IHSProvider.FailureCode.GetPublic 에러 코드}\n\n@summary 생활서비스 전문가 포트폴리오 목록 검색\n\n@tag hs-providers\n\n@param provider_id 생활서비스 전문가 id\n\n@param query 페이지 정보\n\n@return 포트폴리오 공개 정보 목록",
         "x-nestia-namespace": "users.biz-users.hs-providers.portfolios.getList",
         "x-nestia-jsDocTags": [
           {
@@ -4598,8 +4598,8 @@
             "type": "string",
             "format": "url"
           },
-          "is_active": {
-            "description": "활성화 유무\n\n비활성화된 포트폴리오는 자신만 볼 수 있다.",
+          "is_visible": {
+            "description": "공개 설정\n\n비공개 포트폴리오는 자신만 볼 수 있다.",
             "x-typia-required": true,
             "x-typia-optional": false,
             "type": "boolean"
@@ -4658,7 +4658,7 @@
           "id",
           "title",
           "main_url",
-          "is_active",
+          "is_visible",
           "created_at",
           "updated_at"
         ],
@@ -5612,8 +5612,8 @@
             "type": "string",
             "format": "url"
           },
-          "is_active": {
-            "description": "활성화 유무\n\n비활성화된 포트폴리오는 자신만 볼 수 있다.",
+          "is_visible": {
+            "description": "공개 유무\n\n비공개 포트폴리오는 자신만 볼 수 있다.",
             "x-typia-required": true,
             "x-typia-optional": false,
             "type": "boolean"
@@ -5672,7 +5672,7 @@
           "id",
           "title",
           "main_url",
-          "is_active",
+          "is_visible",
           "created_at",
           "updated_at"
         ],
